<resources>
    <string name="toolbar_settings_title">Settings</string>
    <string name="search_hint">Search exercises…</string>
    <string name="search_product_hint">Search products…</string>

    <string name="search_button">Search</string>
    <string name="exercise_name_placeholder">Exercise name</string>
    <string name="exercise_muscle_placeholder">Target muscles</string>
    <string name="add_workout">Add workout</string>
    <string name="workout_name_hint">Workout name</string>
    <string name="save_button">Save</string>
    <string name="add_strength_button">Strength exercise</string>
    <string name="add_cardio_button">Cardio exercise</string>
    <string name="input_name_hint">Name</string>
    <string name="input_description_hint">Description</string>
    <string name="delete_button">Delete</string>
    <string name="header_title">Big title</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="add_button">Add</string>
    <string name="label_speed">Speed</string>
    <string name="label_minutes">Minutes</string>
    <string name="label_weight">Weight</string>
    <string name="label_reps">Reps</string>
    <string name="date_label">Date:</string>
    <string name="duration_label">Length:</string>
    <string name="calories_label">Calories:</string>

    <string name="weekly_reminder_title">New week</string>
    <string name="weekly_reminder_body">Remember to log your trainings and meals</string>

    <string name="workout_reminder_title">Reminder</string>
    <string name="workout_reminder_body">Remember about workout</string>

    <string name="app_name">ShredBook</string>
    <string name="start_button_meals">Mealplan</string>
    <string name="start_button_gym">Trainings</string>
    <string name="start_text">App name</string>
    <string name="settings_button_text">Settings</string>
    <string name="age_placeholder">Age</string>

    <string name="logout">Logout</string>
    <string name="logout_summary">Sign out of your account</string>

    <string name="section_all">All</string>
    <string name="section_recent">Recently Added</string>
    <string name="section_yours">Yours</string>
    <string name="section_edited">Edited by You</string>

    <string name="desc_all_meals">List of all meals</string>
    <string name="desc_recent_meals">List of recently added meals</string>
    <string name="desc_your_meals">List of meals created by you</string>
    <string name="desc_edited_meals">List of meals you have edited</string>
    <string name="global_fab_description">Selected meals list</string>
    <string name="back_fab_description">Back</string>
    <string name="meal_plan_fab_description">View meal plan</string>

    <string name="login_text">Log in</string>
    <string name="login_email_placeholder">Username</string>
    <string name="login_password_placeholder">Password</string>
    <string name="register_text">Register</string>
    <string name="height_placeholder">Height</string>
    <string name="weight_placeholder">Weight</string>
    <string name="birthdate_placeholder">Birthdate</string>
    <string name="deficit_placeholder">Calorie deficit (kcal)</string>
    <string name="create_meal_plan">Create meal plan</string>
    <string name="meal_name_placeholder">Meal Name</string>
    <string name="meal_kcal_placeholder">450 kcal</string>
    <string name="remove_meal_desc">Remove meal</string>
    <string name="meal_image_desc">Meal image</string>
    <string name="auth_start_text">App name</string>
    <string name="auth_start_login_button">Log in</string>
    <string name="auth_start_register_button">Register</string>
    <string name="product_name">Product Name</string>
    <string name="kcal_placeholder">Kcal: 0</string>
    <string name="carbs_placeholder">Carbs: 0g</string>
    <string name="protein_placeholder">Protein: 0g</string>
    <string name="fat_placeholder">Fat: 0g</string>
    <string name="no_selected_meals">No meals selected</string>
    <string name="go_to_plan">Go to plan</string>
    <string name="ingredient_name">Ingredient</string>
    <string name="remove_ingredient">Remove ingredient</string>
    <string name="search_description">Search</string>
    <string name="add_product_description">Add new product</string>
    <string name="barcode_search_description">Search barcode</string>
    <string name="no_meals_text">No meals planned for the selected day</string>
    <string name="product_name_hint">Name</string>
    <string name="kcal_label">Kcal</string>
    <string name="carbs_label">Carbs</string>
    <string name="protein_label">Protein</string>
    <string name="fat_label">Fat</string>
    <string name="nutrient_name_placeholder">Nutrient Name</string>
    <string name="nutrient_quantity_placeholder">0 g</string>
    <string name="ingredient_list_desc">Ingredient list</string>
    <string name="meal_plan_title">Meal Plan</string>
    <string name="meal_description_title">Description</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="nutrition_title">Nutrition Facts</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="edit_meal">Edit meal</string>
    <string name="add_meal">Add meal</string>
    <string name="confirm_add_meal">Confirm addition</string>
    <string name="confirm_button">Confirm</string>

    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="muscles_abdominals">Abdominals</string>
    <string name="muscles_lower_back">Lower Back</string>
    <string name="muscles_shoulders">Shoulders</string>
    <string name="muscles_chest">Chest</string>
    <string name="muscles_lats">Lats</string>
    <string name="muscles_traps">Traps</string>
    <string name="muscles_glutes">Glutes</string>
    <string name="muscles_quads">Quads</string>
    <string name="muscles_hamstrings">Hamstrings</string>
    <string name="muscles_calves">Calves</string>
    <string name="muscles_biceps">Biceps</string>
    <string name="muscles_triceps">Triceps</string>

    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_category_schedule">Notification Schedule</string>
    <string name="pref_title_time">Notification Time</string>
    <string name="pref_title_days">Weekdays</string>

    <string-array name="pref_theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>

    <string-array name="pref_language_entries">
        <item>Polish</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>pl</item>
        <item>en</item>
    </string-array>

    <string-array name="pref_days_entries">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="pref_days_values">
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
        <item>sat</item>
        <item>sun</item>
    </string-array>
    <string-array name="pref_days_default">
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
    </string-array>

</resources>