<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_theme"
        android:title="@string/pref_title_theme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:defaultValue="system" />

    <ListPreference
        android:key="pref_language"
        android:title="@string/pref_title_language"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_values"
        android:defaultValue="pl" />

    <PreferenceCategory android:title="@string/pref_category_schedule">

        <pl.edu.am_projekt.TimePickerPreference
            android:key="pref_schedule_time"
            android:title="@string/pref_title_time"
            android:defaultValue="08:00" />

        <MultiSelectListPreference
            android:key="pref_schedule_days"
            android:title="@string/pref_title_days"
            android:entries="@array/pref_days_entries"
            android:entryValues="@array/pref_days_values"
            android:defaultValue="@array/pref_days_default" />
    </PreferenceCategory>

    <Preference
        android:key="logout_button"
        android:title="@string/logout"
        android:summary="@string/logout_summary" />
</PreferenceScreen>
