<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="?attr/colorSurfaceVariant"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp">

    <EditText
        android:id="@+id/inputLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_name_hint"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:inputType="numberDecimal"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/inputRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_description_hint"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:inputType="number"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?android:textColorPrimary" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:text="@string/delete_button"
        android:backgroundTint="?attr/colorSecondary" />
</LinearLayout>
