<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mealDetailsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/mealImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/meal_image_desc" />

            <FrameLayout
                android:id="@+id/fabContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/editMealButton"
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:layout_gravity="bottom|start"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/edit_button"
                    android:backgroundTint="@color/EditColor"
                    android:tint="@color/white"
                    android:contentDescription="@string/edit_meal" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addMealButton"
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/add_button"
                    app:backgroundTint="@color/AddColor"
                    android:contentDescription="@string/add_meal" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/confirmAddMealButton"
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/confirm_button"
                    android:visibility="gone"
                    android:backgroundTint="@color/ConfirmColor"
                    android:tint="@color/white"
                    android:contentDescription="@string/confirm_add_meal" />
            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="12dp">

                <EditText
                    android:id="@+id/mealNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="3"
                    android:gravity="start|top"
                    android:scrollHorizontally="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:hint="@string/meal_name_placeholder" />

                <TextView
                    android:id="@+id/caloriesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/meal_kcal_placeholder"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meal_description_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/mealDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_description_hint"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:paddingBottom="12dp" />

            <TextView
                android:id="@+id/ingredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                android:paddingTop="8dp"
                android:layout_marginTop="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsRecycler"
                android:descendantFocusability="afterDescendants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clipToPadding="false"
                android:contentDescription="@string/ingredient_list_desc" />

            <Button
                android:id="@+id/addIngredientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/add_button"
                android:background="@drawable/dotted_border_button"
                android:textColor="?android:textColorPrimary"
                android:text="@string/add_ingredient"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/nutritionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nutrition_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nutritionRecycler"
                android:descendantFocusability="afterDescendants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clipToPadding="false"
                android:paddingBottom="12dp"
                android:contentDescription="@string/nutrition_title" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
