<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- E-mail -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Hasło -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_placeholder"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Waga -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight_placeholder"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/height_input"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Wzrost -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/height_placeholder"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toEndOf="@+id/weight_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age_placeholder"
        app:layout_constraintTop_toBottomOf="@id/height_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Deficyt kaloryczny -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deficit_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/deficit_placeholder"
        app:layout_constraintTop_toBottomOf="@id/age_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Przycisk Zatwierdź -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/deficit_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
